--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -17,7 +17,7 @@
 	<nav class="navbar navbar-inverse ">
 		<ul class="nav navbar-nav">
 			<li class="active"><a href="#" th:href="@{/segurado/cadastro-segurado}">Cadastro do Segurado</a></li>
-			<li><a href="#" th:href="@{/segurado/consulta-segurado}"> Lista de Segurados</a></li>
+			<li><a href="#" th:href="@{/segurado/consulta-segurado}"> <i class="icon-book"></i>Consultar Segurado</a></li>
 			<li><a href="#">Consulta do Segurado</a></li>
 		</ul>
 	</nav>
