--- a/src/main/resources/templates/segurado/detalhe-segurado.html
+++ b/src/main/resources/templates/segurado/detalhe-segurado.html
@@ -4,49 +4,61 @@
 <meta charset="UTF-8" />
 <title>Cadastro de Segurado</title>
 
+
 </head>
 <body>
+
 
 	<div th:replace="header"></div>
 	
 	
 	<div class="container" id="content" tabindex="-1">
+		<fieldset class="scheduler-border">
+		<legend class="scheduler-border">Informações do Segurado</legend>
 		<form action="#" th:action="@{/segurado/gravar}" th:object="${segurado}" method="post">
 
-		
-		<div class="row">
+		<div class="row" >
 			<div class="col-md-6"> 
 				<div class="form-group">
-					<label for="" class="control-label">Segurado</label> 
-					<input type="text" th:field="*{nome}" class="form-control" />
-					<p th:if="${#fields.hasErrors('nome')}" class="label label-danger" th:errors="*{nome}">Incorrect LP</p>				
+					<dl>
+						<dt>Segurado:</dt>
+						<dd class="text-info" th:text="*{nome}"></dd>
+					</dl>
 				</div>
 	
 				<div class="form-group">
-					<label for="" class="control-label">CPF</label>
-					<input type="text" th:field="*{cpf}" class="form-control cpf" />
-					 <p th:if="${#fields.hasErrors('cpf')}" class="label label-danger" th:errors="*{cpf}">Incorrect LP</p>
+					<dl>
+						<dt>CPF:</dt>
+						<dd class="text-info" th:text="*{cpf}"></dd>
+					</dl>
 				</div>
 				<div class="form-group">
-					<label for="" class="control-label">Telefone</label> 
-					<input type="text" th:field="*{telefone}" class="form-control telefone" />
-					<p th:if="${#fields.hasErrors('telefone')}" class="label label-danger" th:errors="*{telefone}">Incorrect LP</p>
+				
+					<dl>
+						<dt>Telefone:</dt>
+						<dd class="text-info" th:text="*{telefone}"></dd>
+					</dl>
 				</div>
 			</div>
 			<div class="col-md-6">
 				<div class="form-group">
-					<label for="" class="control-label">CEP</label>
-					<input type="text" th:field="*{cep}" class="form-control cep" /> 
+				
+					<dl>
+						<dt>CEP:</dt>
+						<dd class="text-info" th:text="*{cep}"></dd>
+					</dl>
 				</div>
 				<div class="form-group">
-					<label for="" class="control-label">email</label>
-					 <input type="text" th:field="*{email}" class="form-control" />
-					 <p th:if="${#fields.hasErrors('email')}" class="label label-danger" th:errors="*{email}">Incorrect LP</p>
+					<dl>
+						<dt>e-mail:</dt>
+						<dd class="text-info" th:text="*{email}"></dd>
+					</dl>
 				</div>
 					<div class="form-group">
-						<label for="" class="control-label">Data de Nascimento</label>
-						<input type="text" th:field="*{dataDeNascimento}" class="form-control  date" placeholder="Ex.: dd/mm/aaaa" maxlength="10"/>
-						<p th:if="${#fields.hasErrors('dataDeNascimento')}" class="label label-danger" th:errors="*{dataDeNascimento}">Incorrect LP</p>
+						<dl>
+						<dt>Data de Nascimento:</dt>
+						<dd class="text-info" th:text="*{#dates.format(dataDeNascimento, 'dd/MM/yyyy')}"></dd>
+					</dl>
 					</div>
 					
 			</div>
@@ -56,8 +68,8 @@
 			<div class="centralizar">
 				<button type="submit" class="btn btn-success">Cadastrar</button>
 			</div>
-			
 		</form>
+	</fieldset>
 
 	</div>
 	
