Fazendo tela de Item do Seguro

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -18,7 +18,7 @@
 		<ul class="nav navbar-nav">
 			<li class="active"><a href="#" th:href="@{/segurado/cadastro-segurado}">Cadastro do Segurado</a></li>
 			<li><a href="#" th:href="@{/segurado/consulta-segurado}"> <i class="icon-book"></i>Consultar Segurado</a></li>
-			<li><a href="#">Consulta do Segurado</a></li>
+			<li><a href="#" th:href="@{/item/cadastro-seguroCarro}">Consulta do Segurado</a></li>
 		</ul>
 	</nav>
 </header>
