--- a/src/main/resources/templates/item/cadastro-seguroCarro.html
+++ b/src/main/resources/templates/item/cadastro-seguroCarro.html
@@ -11,54 +11,35 @@
 	
 	
 	<div class="container" id="content" tabindex="-1">
-		<form action="#" th:action="@{/segurado/gravar}" th:object="${segurado}" method="post">
-		<input type="hidden" th:field="*{id}"></input>
-		
-		<div class="row">
-			<div class="col-md-6"> 
-				<div class="form-group">
-					<label for="" class="control-label">Segurado</label> 
-					<input type="text" th:field="*{nome}" class="form-control" />
-					<p th:if="${#fields.hasErrors('nome')}" class="label label-danger" th:errors="*{nome}">Incorrect LP</p>				
-				</div>
-	
-				<div class="form-group">
-					<label for="" class="control-label">CPF</label>
-					<input type="text" th:field="*{cpf}" class="form-control cpf" />
-					 <p th:if="${#fields.hasErrors('cpf')}" class="label label-danger" th:errors="*{cpf}">Incorrect LP</p>
-				</div>
-				<div class="form-group">
-					<label for="" class="control-label">Telefone</label> 
-					<input type="text" th:field="*{telefone}" class="form-control telefone" />
-					<p th:if="${#fields.hasErrors('telefone')}" class="label label-danger" th:errors="*{telefone}">Incorrect LP</p>
-				</div>
-			</div>
-			<div class="col-md-6">
-				<div class="form-group">
-					<label for="" class="control-label">CEP</label>
-					<input type="text" th:field="*{cep}" class="form-control cep" /> 
-				</div>
-				<div class="form-group">
-					<label for="" class="control-label">E-mail</label>
-					 <input type="text" th:field="*{email}" class="form-control" />
-					 <p th:if="${#fields.hasErrors('email')}" class="label label-danger" th:errors="*{email}">Incorrect LP</p>
-				</div>
+		<form action="#" th:action="@{/item/cadastro-seguroCarro}" th:object="${itemSeguroCarro}" method="post">
+			<div class="row">
+				<div class="col-md-6">
 					<div class="form-group">
-						<label for="" class="control-label">Data de Nascimento</label>
-						<input type="text" th:field="*{dataDeNascimento}" class="form-control  date" placeholder="Ex.: dd/mm/aaaa" maxlength="10"/>
-						<p th:if="${#fields.hasErrors('dataDeNascimento')}" class="label label-danger" th:errors="*{dataDeNascimento}">Incorrect LP</p>
+						<label for="" class="control-label">Modelo</label>
+						<input type="text" th:field="*{modelo}" class="form-control" />
+						<p th:if="${#fields.hasErrors('modelo')}" class="label label-danger" th:errors="*{modelo}"></p>	
 					</div>
-					
-			</div>
-		</div>
-			<br />
-			<br />
-			<div class="centralizar">
-				<button type="submit" class="btn btn-success">Cadastrar</button>
-			</div>
+					<div class="form-group">
+						<label for="" class="control-label">Data de Fabricação</label>
+						<input type="text" th:field="*{dataFabricacao}" class="form-control" />
+						<p th:if="${#fields.hasErrors('dataFabricacao')}" class="label label-danger" th:errors="*{dataFabricacao}"></p>	
+					</div>
+					<div class="form-group">
+						<label for="" class="control-label">Placa</label>
+						<input type="text" th:field="*{placa}" class="form-control" />
+						<p th:if="${#fields.hasErrors('placa')}" class="label label-danger" th:errors="*{placa}"></p>	
+					</div>
+					<div class="form-group">
+						<label for="" class="control-label">Chassi</label>
+						<input type="text" th:field="*{chassi}" class="form-control" />
+						<p th:if="${#fields.hasErrors('chassi')}" class="label label-danger" th:errors="*{chassi}"></p>	
+					</div>
+				</div>
 			
+			</div>
+		
+		
 		</form>
-
 	</div>
 	
 	
