--- a/src/main/resources/templates/item/cadastro-seguroCarro.html
+++ b/src/main/resources/templates/item/cadastro-seguroCarro.html
@@ -9,7 +9,6 @@
 	
 	<div th:replace="header"></div>
 	
-	
 	<div class="container" id="content" tabindex="-1">
 		<form action="#" th:action="@{/item/cadastro-seguroCarro}" th:object="${itemSeguroCarro}" method="post">
 			<div class="row">
@@ -26,22 +25,22 @@
 					</div>
 					<div class="form-group">
 						<label for="" class="control-label">Placa</label>
-						<input type="text" th:field="*{placa}" class="form-control" />
+						<input type="text" th:field="*{placa}" class="form-control placa" style="text-transform:uppercase;"/>
 						<p th:if="${#fields.hasErrors('placa')}" class="label label-danger" th:errors="*{placa}"></p>	
 					</div>
 					<div class="form-group">
 						<label for="" class="control-label">Chassi</label>
-						<input type="text" th:field="*{chassi}" class="form-control" />
+						<input type="text" th:field="*{chassi}" class="form-control" maxlength="17" style="text-transform:uppercase;"/>
 						<p th:if="${#fields.hasErrors('chassi')}" class="label label-danger" th:errors="*{chassi}"></p>	
 					</div>
 				</div>
-			
+				<br />
+			<br />
+				<div class="centralizar">
+					<button type="submit" class="btn btn-success">Cadastrar</button>
+				</div>
 			</div>
-		
-		
 		</form>
 	</div>
-	
-	
 </body>
 </html>
