--- a/src/main/resources/templates/segurado/cadastro-segurado.html
+++ b/src/main/resources/templates/segurado/cadastro-segurado.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="UTF-8" />
 <title>Cadastro de Segurado</title>
-
 </head>
 <body>
 
@@ -19,18 +18,18 @@
 				<div class="form-group">
 					<label for="" class="control-label">Segurado</label> 
 					<input type="text" th:field="*{nome}" class="form-control" />
-					<p th:if="${#fields.hasErrors('nome')}" class="label label-danger" th:errors="*{nome}">Incorrect LP</p>				
+					<p th:if="${#fields.hasErrors('nome')}" class="label label-danger" th:errors="*{nome}"></p>				
 				</div>
 	
 				<div class="form-group">
 					<label for="" class="control-label">CPF</label>
 					<input type="text" th:field="*{cpf}" class="form-control cpf" />
-					 <p th:if="${#fields.hasErrors('cpf')}" class="label label-danger" th:errors="*{cpf}">Incorrect LP</p>
+					 <p th:if="${#fields.hasErrors('cpf')}" class="label label-danger" th:errors="*{cpf}"></p>
 				</div>
 				<div class="form-group">
 					<label for="" class="control-label">Telefone</label> 
 					<input type="text" th:field="*{telefone}" class="form-control telefone" />
-					<p th:if="${#fields.hasErrors('telefone')}" class="label label-danger" th:errors="*{telefone}">Incorrect LP</p>
+					<p th:if="${#fields.hasErrors('telefone')}" class="label label-danger" th:errors="*{telefone}"></p>
 				</div>
 			</div>
 			<div class="col-md-6">
@@ -41,14 +40,13 @@
 				<div class="form-group">
 					<label for="" class="control-label">E-mail</label>
 					 <input type="text" th:field="*{email}" class="form-control" />
-					 <p th:if="${#fields.hasErrors('email')}" class="label label-danger" th:errors="*{email}">Incorrect LP</p>
+					 <p th:if="${#fields.hasErrors('email')}" class="label label-danger" th:errors="*{email}" ></p>
 				</div>
 					<div class="form-group">
 						<label for="" class="control-label">Data de Nascimento</label>
 						<input type="text" th:field="*{dataDeNascimento}" class="form-control  date" placeholder="Ex.: dd/mm/aaaa" maxlength="10"/>
 						<p th:if="${#fields.hasErrors('dataDeNascimento')}" class="label label-danger" th:errors="*{dataDeNascimento}">Incorrect LP</p>
 					</div>
-					
 			</div>
 		</div>
 			<br />
@@ -56,7 +54,6 @@
 			<div class="centralizar">
 				<button type="submit" class="btn btn-success">Cadastrar</button>
 			</div>
-			
 		</form>
 
 	</div>
