Ajuste do layout
-colocado icon-fonts
-ajustado a cor dos botões
-organizado o menu

--- a/src/main/resources/templates/segurado/consulta-segurado.html
+++ b/src/main/resources/templates/segurado/consulta-segurado.html
@@ -41,7 +41,7 @@
 
 			<br /> <br />
 			<div class="centralizar">
-				<button type="submit"  class="btn btn-success">Consultar</button>
+				<button type="submit"  class="btn btn-primary">Consultar</button>
 			</div>
 		</form>
 		<br />
@@ -61,7 +61,6 @@
 			     </div>
 			      <div class="modal-footer">
 			        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-			        
 			      </div>
 			    </div><!-- /.modal-content -->
 			  </div><!-- /.modal-dialog -->
