--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -11,14 +11,31 @@
 <script src="../../bootstrap/js/bootstrap.min.js"></script>
 <script src="../../js/segurado/segurado-script.js"></script>
 <script src="../../js/jquery-mask.js"></script>
+<style>
+.white {
+	color:white;
+}
+</style>
 </head>
 <body>
+
 <header>
-	<nav class="navbar navbar-inverse ">
+	<nav class="navbar navbar-default ">
 		<ul class="nav navbar-nav">
-			<li class="active"><a href="#" th:href="@{/segurado/cadastro-segurado}">Cadastro do Segurado</a></li>
-			<li><a href="#" th:href="@{/segurado/consulta-segurado}"> <i class="icon-book"></i>Consultar Segurado</a></li>
-			<li><a href="#" th:href="@{/item/cadastro-seguroCarro}">Consulta do Segurado</a></li>
+			<li class="dropdown">
+				<a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-user" aria-hidden="true"></i> Segurado <b class="caret"></b></a>
+				<ul class="dropdown-menu">
+                  <li><a href="#" th:href="@{/segurado/cadastro-segurado}"><i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> Cadastro do Segurado</a></li>
+                  <li><a href="#" th:href="@{/segurado/consulta-segurado}"><i class="glyphicon glyphicon-search" aria-hidden="true"></i> Consultar Segurado</a></li>
+                </ul>
+			</li>
+			<li class="dropdown">
+				<a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-folder-open" aria-hidden="true"></i> Item Seguro <b class="caret"></b></a>
+				<ul class="dropdown-menu">
+                  <li><a href="#" th:href="@{/item/cadastro-seguroCarro}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> Cadastro Seguro de Carro</a></li>
+                </ul>
+			</li>
+			
 		</ul>
 	</nav>
 </header>
