--- a/src/main/resources/templates/item/cadastro-seguroCarro.html
+++ b/src/main/resources/templates/item/cadastro-seguroCarro.html
@@ -10,7 +10,7 @@
 	<div th:replace="header"></div>
 	
 	<div class="container" id="content" tabindex="-1">
-		<form action="#" th:action="@{/item/cadastro-seguroCarro}" th:object="${itemSeguroCarro}" method="post">
+		<form action="#" th:action="@{/item/gravar}" th:object="${itemSeguroCarro}" method="post">
 			<div class="row">
 				<div class="col-md-6">
 					<div class="form-group">
