--- a/src/main/resources/templates/sucesso.html
+++ b/src/main/resources/templates/sucesso.html
@@ -8,7 +8,11 @@
 	<div th:replace="header"></div>
 	<div class="container" id="content" tabindex="-1">
 		<h1>Cadastrado Com Sucesso!</h1>
+		<div>
+			<input type="button" class="btn btn-default" onclick="voltar();" value="Voltar"></input>
+		</div>
 	</div>
+	
 
 
 </body>
