--- a/src/main/resources/templates/segurado/cadastro-segurado.html
+++ b/src/main/resources/templates/segurado/cadastro-segurado.html
@@ -10,6 +10,10 @@
 	
 	
 	<div class="container" id="content" tabindex="-1">
+		<fieldset class="scheduler-border">
+		<legend class="scheduler-border">Cadastro do Segurado</legend>
+		<br/>
+		<br/>
 		<form action="#" th:action="@{/segurado/gravar}" th:object="${segurado}" method="post">
 		<input type="hidden" th:field="*{id}"></input>
 		
@@ -51,10 +55,14 @@
 		</div>
 			<br />
 			<br />
+		<hr/>
+			<br />
+		
 			<div class="centralizar">
 				<button type="submit" class="btn btn-success">Cadastrar</button>
 			</div>
 		</form>
+		</fieldset>
 
 	</div>
 	
