--- a/src/main/resources/templates/segurado/consulta-segurado.html
+++ b/src/main/resources/templates/segurado/consulta-segurado.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8" />
-<title>Cadastro de Segurado</title>
+<title>Consulta de Segurado</title>
 </head>
 <body>
 
@@ -11,6 +11,10 @@
 
 	<div class="container" id="content" tabindex="-1">
 
+	<fieldset class="scheduler-border">
+		<legend class="scheduler-border">Consulta do Segurado</legend>
+		<br/>
+		<br/>
 
 		<form action="#" th:action="@{/segurado/buscar}"  method="get">
 
@@ -40,33 +44,16 @@
 			</div>
 
 			<br /> <br />
+			<hr/>
+			<br />
 			<div class="centralizar">
 				<button type="submit"  class="btn btn-primary">Consultar</button>
 			</div>
 		</form>
+		</fieldset>
 		<br />
-	<br />
-
-		<div class="modal fade" tabindex="-1" role="dialog" th:id="modal">
-			  <div class="modal-dialog" role="document">
-			    <div class="modal-content">
-			      <div class="modal-header">
-			        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-			        <h4 class="modal-title">Modal title</h4>
-			      </div>
-			      <div class="modal-body" th:object="${detalhe}" th:if="${detalhe}!= null">
-			      <p><span th:text="${detalhe.cpf}"></span></p>
-			     <p><span th:text="${detalhe.cpf}"></span></p>
-			     	
-			     </div>
-			      <div class="modal-footer">
-			        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-			      </div>
-			    </div><!-- /.modal-content -->
-			  </div><!-- /.modal-dialog -->
-			</div><!-- /.modal -->
-
-
+		<br />
+		<br />
 
 	
 	<!-- Button trigger modal -->
