--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -5,12 +5,16 @@
 <title>Cadastro de Segurado</title>
 <link href="../../bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 <link href="../../estilo/estilo.css" rel="stylesheet" />
+<link rel="stylesheet prefetch" href="http://fonts.googleapis.com/css?family=Open+Sans:600"/>
+<link rel="stylesheet" href="../../css/style.css"/>
 
 <script src="../../js/jquery-3.1.1.min.js"></script>
 <script src="../../js/jquery-ui.min.js"></script>
 <script src="../../bootstrap/js/bootstrap.min.js"></script>
 <script src="../../js/segurado/segurado-script.js"></script>
 <script src="../../js/jquery-mask.js"></script>
+
+
 <style>
 .white {
 	color:white;
