--- a/src/main/resources/templates/item/cadastro-seguroCarro.html
+++ b/src/main/resources/templates/item/cadastro-seguroCarro.html
@@ -11,7 +11,7 @@
 	
 	<div class="container" id="content" tabindex="-1">
 		<fieldset class="scheduler-border">
-		<legend class="scheduler-border">Cadastro do Segurado</legend>
+		<legend class="scheduler-border white">Cadastro do Segurado</legend>
 		<br/>
 		<br/>
 		
