--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -160,11 +160,11 @@ a{color:inherit;text-decoration:none}
 .foot-lnk{
 	text-align:center;
 }
-.container {
+.container-login {
 	text-align: center;
 	margin-top: 50px;
 }
 
 .white{
-	color:#FFFFF;
+	color:#FFF;
 }
