--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -34,7 +34,7 @@
                         <div class="foot-lnk">
                             <a href="#forgot">Esqueceu a senha?</a>
                         </div>
-                        <div class="container"><img src="img/brand-melao.png" /></div>
+                        <div class="container-login"><img src="img/brand-melao.png" /></div>
                     </div>
                     <div class="sign-up-htm">
                         <div class="group">
