--- a/src/main/resources/templates/segurado/consulta-segurado.html
+++ b/src/main/resources/templates/segurado/consulta-segurado.html
@@ -12,14 +12,14 @@
 	<div class="container" id="content" tabindex="-1">
 
 	<fieldset class="scheduler-border">
-		<legend class="scheduler-border">Consulta do Segurado</legend>
+		<legend class="scheduler-border white">Consulta do Segurado</legend>
 		<br/>
 		<br/>
 
 		<form action="#" th:action="@{/segurado/buscar}"  method="get">
 
 			<div class="row"  th:object="${segurado}">
-				<div class="col-md-4">
+				<div class="col-md-6">
 
 					
 					<div class="form-group" id="consulta-segurado">
