--- a/src/main/resources/templates/segurado/detalhe-segurado.html
+++ b/src/main/resources/templates/segurado/detalhe-segurado.html
@@ -9,7 +9,7 @@
 	
 	<div class="container" id="content" tabindex="-1">
 		<fieldset class="scheduler-border">
-		<legend class="scheduler-border">Informações do Segurado</legend>
+		<legend class="scheduler-border white">Informações do Segurado</legend>
 		<form action="#" th:action="@{/segurado/gravar}" th:object="${segurado}" method="post">
 
 		<div class="row" >
