--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <title>Cadastro de Segurado</title>
 <link href="../../bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-<link href="../../estilo/estilo.css" rel="stylesheet" />
+<link href="../../css/estilo.css" rel="stylesheet" />
 <link rel="stylesheet prefetch" href="http://fonts.googleapis.com/css?family=Open+Sans:600"/>
 <link rel="stylesheet" href="../../css/style.css"/>
 
@@ -16,9 +16,6 @@
 
 
 <style>
-.white {
-	color:white;
-}
 </style>
 </head>
 <body>
