--- a/src/main/resources/templates/item/cadastro-seguroCarro.html
+++ b/src/main/resources/templates/item/cadastro-seguroCarro.html
@@ -47,7 +47,7 @@
 			<hr/>
 			<br/>
 			<div class="centralizar">
-					<a href="#" th:href="@{/item/gravar}" class="btn btn-success">Cadastrar</a>
+					<button type="submit" class="btn btn-success">Cadastrar</button>
 			</div>
 		</form>
 		</fieldset>
