--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -4,17 +4,17 @@
 <meta charset="UTF-8" />
 <title>Cadastro de Segurado</title>
 <link href="../../bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-<link href="../../estilo/estilo.css" rel="stylesheet" />
+<link href="../../css/estilo.css" rel="stylesheet" />
+<link rel="stylesheet prefetch" href="http://fonts.googleapis.com/css?family=Open+Sans:600"/>
 
 <script src="../../js/jquery-3.1.1.min.js"></script>
 <script src="../../js/jquery-ui.min.js"></script>
 <script src="../../bootstrap/js/bootstrap.min.js"></script>
 <script src="../../js/segurado/segurado-script.js"></script>
 <script src="../../js/jquery-mask.js"></script>
+
+
 <style>
-.white {
-	color:white;
-}
 </style>
 </head>
 <body>
