--- a/src/main/resources/templates/item/cadastro-seguroCarro.html
+++ b/src/main/resources/templates/item/cadastro-seguroCarro.html
@@ -11,12 +11,11 @@
 	
 	<div class="container" id="content" tabindex="-1">
 		<fieldset class="scheduler-border">
-		<legend class="scheduler-border">Cadastro do Segurado</legend>
+		<legend class="scheduler-border white">Cadastro do Segurado</legend>
 		<br/>
 		<br/>
 		
-		<form action="#" th:action="@{/item/cadastro-seguroCarro}" th:object="${itemSeguroCarro}" method="post">
-
+		<form action="#" th:action="@{/item/gravar}" th:object="${itemSeguroCarro}" method="post">
 			<div class="row">
 				<div class="col-md-6">
 					<div class="form-group">
