--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -23,19 +23,21 @@
 	<nav class="navbar navbar-default ">
 		<ul class="nav navbar-nav">
 			<li class="dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-user" aria-hidden="true"></i> Segurado <b class="caret"></b></a>
+				<a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-user" aria-hidden="true"></i> &nbsp;Segurado <b class="caret"></b></a>
 				<ul class="dropdown-menu">
-                  <li><a href="#" th:href="@{/segurado/cadastro-segurado}"><i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> Cadastro do Segurado</a></li>
-                  <li><a href="#" th:href="@{/segurado/consulta-segurado}"><i class="glyphicon glyphicon-search" aria-hidden="true"></i> Consultar Segurado</a></li>
+                  <li><a href="#" th:href="@{/segurado/cadastro-segurado}"><i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Cadastro do Segurado</a></li>
+                  <li><a href="#" th:href="@{/segurado/consulta-segurado}"><i class="glyphicon glyphicon-search" aria-hidden="true"></i> &nbsp;Consultar Segurado</a></li>
                 </ul>
 			</li>
 			<li class="dropdown">
-				<a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-folder-open" aria-hidden="true"></i> Item Seguro <b class="caret"></b></a>
+				<a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-folder-open" aria-hidden="true"></i> &nbsp;Item Seguro <b class="caret"></b></a>
 				<ul class="dropdown-menu">
-                  <li><a href="#" th:href="@{/item/cadastro-seguroCarro}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> Cadastro Seguro de Carro</a></li>
+                  <li><a href="#" th:href="@{/item/cadastro-seguroCarro}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Cadastro Seguro de Carro</a></li>
                 </ul>
 			</li>
-			
+		</ul>
+		<ul>
+            <li><span class="pull-right" style="margin-top:12px; margin-right: 12px"><img src="../../img/brand-nav.png" width="22px" height="22px"/></span></li>
 		</ul>
 	</nav>
 </header>
