--- a/src/main/resources/templates/segurado/cadastro-segurado.html
+++ b/src/main/resources/templates/segurado/cadastro-segurado.html
@@ -10,6 +10,7 @@
 	
 	
 	<div class="container" id="content" tabindex="-1">
+	<div class="borda-div" >
 		<fieldset class="scheduler-border">
 		<legend class="scheduler-border white">Cadastro do Segurado</legend>
 		<br/>
@@ -17,7 +18,9 @@
 		<form action="#" th:action="@{/segurado/gravar}" th:object="${segurado}" method="post">
 		
 		<div class="row">
-			<div class="col-md-6"> 
+			<div class="col-md-3">
+			</div> 
+			<div class="col-md-3"> 
 				<div class="form-group">
 					<label for="" class="control-label">Segurado</label> 
 					<input type="text" th:field="*{nome}" class="form-control" />
@@ -35,7 +38,7 @@
 					<p th:if="${#fields.hasErrors('telefone')}" class="label label-danger" th:errors="*{telefone}"></p>
 				</div>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-3">
 				<div class="form-group">
 					<label for="" class="control-label">CEP</label>
 					<input type="text" th:field="*{cep}" class="form-control cep" /> 
@@ -54,7 +57,7 @@
 		</div>
 			<br />
 			<br />
-		<hr/>
+		<hr style="border:1px dotted #e7e7e7;" />
 			<br />
 		
 			<div class="centralizar">
@@ -62,9 +65,44 @@
 			</div>
 		</form>
 		</fieldset>
-
 	</div>
-	
-	
+	</div>
+	<footer class="section section-primary">
+		<div class="container text-center" >
+			<div class="row" >
+				<div class="col-md-12">
+					<h3 style="color:#CCC">SISTEMA GERENCIADOR DE SEGUROS</h3>
+					<p style="color:#CCC">copyright © corretora de seguros 2017</p>
+				</div>
+				<div class="col-md-4">
+					<p class="text-info text-right">
+						<br />
+						<br />
+					</p>
+					<div class="row">
+						<div class="col-md-12 hidden-lg hidden-md hidden-sm text-left">
+							<a href="#"><i
+								class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a> <a
+								href="#"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
+							<a href="#"><i
+								class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a> <a href="#"><i
+								class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12 hidden-xs text-right">
+							<a href="#"><i
+								class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a> <a
+								href="#"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
+							<a href="#"><i
+								class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a> <a href="#"><i
+								class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+
 </body>
 </html>
