--- a/src/main/resources/templates/segurado/consulta-segurado.html
+++ b/src/main/resources/templates/segurado/consulta-segurado.html
@@ -10,16 +10,16 @@
 	
 
 	<div class="container" id="content" tabindex="-1">
+	<div class="borda-div">
 
 	<fieldset class="scheduler-border">
 		<legend class="scheduler-border white">Consulta do Segurado</legend>
 		<br/>
-		<br/>
 
 		<form action="#" th:action="@{/segurado/buscar}"  method="get">
-
+			<div class="col-md-4"></div>
 			<div class="row"  th:object="${segurado}">
-				<div class="col-md-3">
+				<div class="col-md-4">
 
 					
 					<div class="form-group" id="consulta-segurado">
@@ -41,50 +41,55 @@
 						<input type="text"	class="form-control cep" th:field="*{cep}" />
 					</div>
 				</div>
+				<div class="col-md-3">
+				
+				</div>
 			</div>
 
-			<br /> <br />
-			<hr/>
+			<br />
+			<hr style="border:1px dotted #e7e7e7;" />
 			<br />
 			<div class="centralizar">
 				<button type="submit"  class="btn btn-primary">Consultar</button>
 			</div>
 		</form>
 		</fieldset>
-		<br />
-		<br />
-		<br />
+		
 
 	
 	<!-- Button trigger modal -->
 
+	<div th:if="${listaSegurados ne null and not listaSegurados.empty}">
+	<br />
+	<br />
+	<br />
+		<table class="table table-hover" id="tab-segurado">
 	
-	<table class="table table-hover" id="tab-segurado" th:if="${listaSegurados ne null and not listaSegurados.empty}">
+			<tr>
+				<th>Nome</th>
+				<th>Cpf</th>
+				<th>Telefone</th>
+				<th>Cep</th>
+				<th></th>
+				<th></th>
+			</tr>
+			<tr th:each="segurado : ${listaSegurados}">
+				<td><span th:text="${segurado.nome}"></span></td>
+				<td><span th:text="${segurado.cpf}"></span></td>
+				<td><span th:text="${segurado.telefone}"></span></td>
+				<td><span th:text="${segurado.cep}"></span></td>
+				<td><a href="#" th:href="@{/segurado/alterarSegurado(id=${segurado.id})}">Atualizar</a></td>
+				<td><a href="#" th:href="@{/segurado/visualizar(id=${segurado.id})}">Detalhes</a></td>
+				
+			</tr>
+		</table>
 
-		<tr>
-			<th>Nome</th>
-			<th>Cpf</th>
-			<th>Telefone</th>
-			<th>Cep</th>
-			<th></th>
-			<th></th>
-		</tr>
-		<tr th:each="segurado : ${listaSegurados}">
-			<td><span th:text="${segurado.nome}"></span></td>
-			<td><span th:text="${segurado.cpf}"></span></td>
-			<td><span th:text="${segurado.telefone}"></span></td>
-			<td><span th:text="${segurado.cep}"></span></td>
-			<td><a href="#" th:href="@{/segurado/alterarSegurado(id=${segurado.id})}">Atualizar</a></td>
-			<td><a href="#" th:href="@{/segurado/visualizar(id=${segurado.id})}">Detalhes</a></td>
-			
-		</tr>
-	</table>
-
-		
+	</div>
+	</div>
 		
 
 	</div>
-
+	<div th:replace="footter"></div>
 
 </body>
 </html>
