--- a/src/main/resources/templates/segurado/cadastro-segurado.html
+++ b/src/main/resources/templates/segurado/cadastro-segurado.html
@@ -12,8 +12,7 @@
 	<div class="container" id="content" tabindex="-1">
 	<div class="borda-div" >
 		<fieldset class="scheduler-border">
-		<legend class="scheduler-border white">Cadastro do Segurado</legend>
-		<br/>
+		<legend class="scheduler-border">Cadastro do Segurado</legend>
 		<br/>
 		<form action="#" th:action="@{/segurado/gravar}" th:object="${segurado}" method="post">
 		
@@ -57,7 +56,7 @@
 		</div>
 			<br />
 			<br />
-		<hr style="border:1px dotted #e7e7e7;" />
+			<hr style="border:1px dotted #e7e7e7;" />
 			<br />
 		
 			<div class="centralizar">
@@ -67,42 +66,8 @@
 		</fieldset>
 	</div>
 	</div>
-	<footer class="section section-primary">
-		<div class="container text-center" >
-			<div class="row" >
-				<div class="col-md-12">
-					<h3 style="color:#CCC">SISTEMA GERENCIADOR DE SEGUROS</h3>
-					<p style="color:#CCC">copyright © corretora de seguros 2017</p>
-				</div>
-				<div class="col-md-4">
-					<p class="text-info text-right">
-						<br />
-						<br />
-					</p>
-					<div class="row">
-						<div class="col-md-12 hidden-lg hidden-md hidden-sm text-left">
-							<a href="#"><i
-								class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a> <a
-								href="#"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
-							<a href="#"><i
-								class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a> <a href="#"><i
-								class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12 hidden-xs text-right">
-							<a href="#"><i
-								class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a> <a
-								href="#"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
-							<a href="#"><i
-								class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a> <a href="#"><i
-								class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
+	<div th:replace="footter"></div>
+	
 
 </body>
 </html>
