--- a/src/main/resources/templates/segurado/detalhe-segurado.html
+++ b/src/main/resources/templates/segurado/detalhe-segurado.html
@@ -8,11 +8,13 @@
 	<div th:replace="header"></div>
 	
 	<div class="container" id="content" tabindex="-1">
+	<div class="borda-div">
 		<fieldset class="scheduler-border">
-		<legend class="scheduler-border white">Informações do Segurado</legend>
+		<legend class="scheduler-border">Informações do Segurado</legend>
 		<form action="#" th:action="@{/segurado/gravar}" th:object="${segurado}" method="post">
 
 		<div class="row" >
+			
 			<div class="col-md-4"> 
 				<div class="form-group">
 					<dl>
@@ -21,12 +23,7 @@
 					</dl>
 				</div>
 	
-				<div class="form-group">
-					<dl>
-						<dt>CPF:</dt>
-						<dd class="text-info" th:text="*{cpf}"></dd>
-					</dl>
-				</div>
+				
 				<div class="form-group">
 				
 					<dl>
@@ -35,7 +32,7 @@
 					</dl>
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-4">
 				<div class="form-group">
 				
 					<dl>
@@ -49,26 +46,44 @@
 						<dd class="text-info" th:text="*{email}"></dd>
 					</dl>
 				</div>
-					<div class="form-group">
+					
+			</div>
+				
+			<div class="col-md-4">
+				<div class="form-group">
+					<dl>
+						<dt>CPF:</dt>
+						<dd class="text-info" th:text="*{cpf}"></dd>
+					</dl>
+				</div>
+				
+				<div class="form-group">
 						<dl>
 						<dt>Data de Nascimento:</dt>
 						<dd class="text-info" th:text="*{#dates.format(dataDeNascimento, 'dd/MM/yyyy')}"></dd>
 					</dl>
-					</div>
-					
+				</div>
 			</div>
+			
 		</div>
 			<br />
 			<br />
+			<hr style="border:1px dotted #e7e7e7;" />
+			<br />
+			
 			<div class="centralizar">
-				<input type="button" class="btn btn-default" onclick="voltar();" value="Voltar"></input>
-				<a href="#" th:href="@{/segurado/cadastrar-item(id=${segurado.id})}" class="btn btn-success">Cadastrar Item de Seguro</a>
+				<input type="button" class="btn btn-default" style="width:140px"  onclick="voltar();" value="Voltar"></input>
+				<a href="#" th:href="@{/segurado/cadastrar-item(id=${segurado.id})}" class="btn btn-success">Cadastrar Seguro</a>
 			</div>
 		</form>
 
 <br/>		
 <br/>		
 <br/>		
+	<legend class="scheduler-border">Seguros</legend>
+<br/>		
+<br/>		
+
 		<table class="table table-hover" id="tab-segurado">
 
 		<tr>
@@ -86,9 +101,11 @@
 		</table>
 		
 	</fieldset>
+	
 
 	</div>
-	
+	</div>
+	<div th:replace="footter"></div>
 	
 </body>
 </html>
