Ajustes de layout

--- a/src/main/resources/templates/segurado/cadastro-segurado.html
+++ b/src/main/resources/templates/segurado/cadastro-segurado.html
@@ -7,64 +7,73 @@
 <body>
 
 	<div th:replace="header"></div>
-	
-	
+
+
 	<div class="container" id="content" tabindex="-1">
+		<div class="borda-div">
 		<fieldset class="scheduler-border">
 		<legend class="scheduler-border white">Cadastro do Segurado</legend>
-		<br/>
+	
 		<br/>
 		<form action="#" th:action="@{/segurado/gravar}" th:object="${segurado}" method="post">
-		
+		<input type="hidden" th:field="*{id}"></input>
 		<div class="row">
-			<div class="col-md-6"> 
+		<div class="col-md-3"></div>
+			<div class="col-md-3">
 				<div class="form-group">
-					<label for="" class="control-label">Segurado</label> 
+					<label for="" class="control-label">Segurado</label>
 					<input type="text" th:field="*{nome}" class="form-control" />
-					<p th:if="${#fields.hasErrors('nome')}" class="label label-danger" th:errors="*{nome}"></p>				
+					<p th:if="${#fields.hasErrors('nome')}" class="label label-primary" th:errors="*{nome}"></p>
 				</div>
-	
+
 				<div class="form-group">
 					<label for="" class="control-label">CPF</label>
 					<input type="text" th:field="*{cpf}" class="form-control cpf" />
-					 <p th:if="${#fields.hasErrors('cpf')}" class="label label-danger" th:errors="*{cpf}"></p>
+					 <p th:if="${#fields.hasErrors('cpf')}" class="label label-primary" th:errors="*{cpf}"></p>
 				</div>
 				<div class="form-group">
-					<label for="" class="control-label">Telefone</label> 
+					<label for="" class="control-label">Telefone</label>
 					<input type="text" th:field="*{telefone}" class="form-control telefone" />
-					<p th:if="${#fields.hasErrors('telefone')}" class="label label-danger" th:errors="*{telefone}"></p>
+					<p th:if="${#fields.hasErrors('telefone')}" class="label label-primary" th:errors="*{telefone}"></p>
 				</div>
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-3">
 				<div class="form-group">
 					<label for="" class="control-label">CEP</label>
-					<input type="text" th:field="*{cep}" class="form-control cep" /> 
+					<input type="text" th:field="*{cep}" class="form-control cep" />
 				</div>
 				<div class="form-group">
 					<label for="" class="control-label">E-mail</label>
 					 <input type="text" th:field="*{email}" class="form-control" />
-					 <p th:if="${#fields.hasErrors('email')}" class="label label-danger" th:errors="*{email}" ></p>
+					 <p th:if="${#fields.hasErrors('email')}" class="label label-primary" th:errors="*{email}" ></p>
 				</div>
 					<div class="form-group">
 						<label for="" class="control-label">Data de Nascimento</label>
 						<input type="text" th:field="*{dataDeNascimento}" class="form-control  date" placeholder="Ex.: dd/mm/aaaa" maxlength="10"/>
-						<p th:if="${#fields.hasErrors('dataDeNascimento')}" class="label label-danger" th:errors="*{dataDeNascimento}">Incorrect LP</p>
+						<p th:if="${#fields.hasErrors('dataDeNascimento')}" class="label label-primary" th:errors="*{dataDeNascimento}">Incorrect LP</p>
 					</div>
 			</div>
+			
+			
+			<div class="col-md-3">
+			
+			
+			
+			
+			
+			</div>
 		</div>
-			<br />
-			<br />
-		<hr/>
-			<br />
 		
+		<hr/>
+
 			<div class="centralizar">
 				<button type="submit" class="btn btn-success">Cadastrar</button>
 			</div>
 		</form>
 		</fieldset>
-
 	</div>
-	
-	
+	</div>
+
+<div th:replace="footer"></div>
 </body>
 </html>
