--- a/src/main/resources/static/css/estilo.css
+++ b/src/main/resources/static/css/estilo.css
@@ -2,4 +2,24 @@
 .centralizar{
     text-align: center;
 }
+.navbar-default {
+    background-color: #39436D;
+}
 
+.navbar-default .navbar-nav>li>a {
+    color: #FFF;
+}
+
+body{
+	background-color: #F1F1F1;
+}
+
+.borda-div{
+	border: 1px solid #CCC;
+	border-radius:10px;
+	padding:20px;
+}
+
+hr{
+	border: 1px solid #E7E7E7;
+}
