--- a/src/main/resources/templates/item/cadastro-seguroCarro.html
+++ b/src/main/resources/templates/item/cadastro-seguroCarro.html
@@ -10,47 +10,45 @@
 	<div th:replace="header"></div>
 	
 	<div class="container" id="content" tabindex="-1">
+	<div class="borda-div">
 		<fieldset class="scheduler-border">
-		<legend class="scheduler-border white">Cadastro do Segurado</legend>
-		<br/>
+		<legend class="scheduler-border">Cadastro do Segurado</legend>
 		<br/>
 		
 		<form action="#" th:action="@{/item/gravar}" th:object="${itemSeguroCarro}" method="post">
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-md-4"></div>
+				<div class="col-md-4">
 					<div class="form-group">
 						<label for="" class="control-label">Modelo</label>
 						<input type="text" th:field="*{modelo}" class="form-control" />
-						<p th:if="${#fields.hasErrors('modelo')}" class="label label-danger" th:errors="*{modelo}"></p>	
+						<p th:if="${#fields.hasErrors('modelo')}" class="label label-primary" th:errors="*{modelo}"></p>	
 					</div>
 					<div class="form-group">
 						<label for="" class="control-label">Data de Fabricação</label>
-						<input type="text" th:field="*{dataFabricacao}" class="form-control" />
-						<p th:if="${#fields.hasErrors('dataFabricacao')}" class="label label-danger" th:errors="*{dataFabricacao}"></p>	
+						<input type="text" th:field="*{dataFabricacao}" class="form-control date" placeholder="Ex:dd/mm/aaaa"/>
+						<p th:if="${#fields.hasErrors('dataFabricacao')}" class="label label-primary" th:errors="*{dataFabricacao}"></p>	
 					</div>
 					<div class="form-group">
 						<label for="" class="control-label">Placa</label>
 						<input type="text" th:field="*{placa}" class="form-control placa" style="text-transform:uppercase;"/>
-						<p th:if="${#fields.hasErrors('placa')}" class="label label-danger" th:errors="*{placa}"></p>	
+						<p th:if="${#fields.hasErrors('placa')}" class="label label-primary" th:errors="*{placa}"></p>	
 					</div>
 					<div class="form-group">
 						<label for="" class="control-label">Chassi</label>
 						<input type="text" th:field="*{chassi}" class="form-control" maxlength="17" style="text-transform:uppercase;"/>
-						<p th:if="${#fields.hasErrors('chassi')}" class="label label-danger" th:errors="*{chassi}"></p>	
+						<p th:if="${#fields.hasErrors('chassi')}" class="label label-primary" th:errors="*{chassi}"></p>	
 					</div>
 				</div>
-				<br />
-				<br />
 			</div>
-			<br/>
-			<br/>
 			<hr/>
-			<br/>
 			<div class="centralizar">
 					<button type="submit" class="btn btn-success">Cadastrar</button>
 			</div>
 		</form>
 		</fieldset>
+		</div>
 	</div>
+	<div th:replace="footer"></div>
 </body>
 </html>
