--- a/src/main/resources/templates/segurado/consulta-segurado.html
+++ b/src/main/resources/templates/segurado/consulta-segurado.html
@@ -7,19 +7,16 @@
 <body>
 
 	<div th:replace="header"></div>
-	
-
 	<div class="container" id="content" tabindex="-1">
-
+	<div class="borda-div">
 	<fieldset class="scheduler-border">
-		<legend class="scheduler-border white">Consulta do Segurado</legend>
-		<br/>
-		<br/>
+		<legend class="scheduler-border">Consulta do Segurado</legend>
 
 		<form action="#" th:action="@{/segurado/buscar}"  method="get">
 
 			<div class="row"  th:object="${segurado}">
-				<div class="col-md-6">
+				<div class="col-md-4"></div>
+				<div class="col-md-4">
 
 					
 					<div class="form-group" id="consulta-segurado">
@@ -42,24 +39,20 @@
 					</div>
 				</div>
 			</div>
-
-			<br /> <br />
 			<hr/>
-			<br />
 			<div class="centralizar">
 				<button type="submit"  class="btn btn-primary">Consultar</button>
 			</div>
 		</form>
-		</fieldset>
-		<br />
-		<br />
-		<br />
-
 	
-	<!-- Button trigger modal -->
-
-	
-	<table class="table table-hover" id="tab-segurado" th:if="${listaSegurados ne null and not listaSegurados.empty}">
+	<div th:if="${listaSegurados ne null and not listaSegurados.empty}">
+		<br />
+		<br />
+		<br />
+	<legend class="scheduler-border">Segurados</legend>
+	<br />
+	<br />
+	<table class="table table-hover" id="tab-segurado" >
 
 		<tr>
 			<th>Nome</th>
@@ -74,16 +67,22 @@
 			<td><span th:text="${segurado.cpf}"></span></td>
 			<td><span th:text="${segurado.telefone}"></span></td>
 			<td><span th:text="${segurado.cep}"></span></td>
-			<td><a href="#" th:href="@{/segurado/alterarSegurado(id=${segurado.id})}">Atualizar</a></td>
-			<td><a href="#" th:href="@{/segurado/visualizar(id=${segurado.id})}">Detalhes</a></td>
+			<td><a href="#" th:href="@{/segurado/alterarSegurado(id=${segurado.id})}"><i class="glyphicon glyphicon-pencil" aria-hidden="true" data-toggle="tooltip" title="Editar Segurado "></i></a></td>
+			<td><a href="#" th:href="@{/segurado/visualizar(id=${segurado.id})}"><i class="glyphicon glyphicon-paste" aria-hidden="true" data-toggle="tooltip" title="Detalhes do Segurado"></i></a></td>
 			
 		</tr>
 	</table>
-
-		
-		
-
 	</div>
+		</fieldset>
+	</div>
+	
+		</div>
+		
+
+	
+	<!-- Button trigger modal -->
+
+	<div th:replace="footer"></div>
 
 
 </body>
