--- a/src/main/resources/templates/segurado/detalhe-segurado.html
+++ b/src/main/resources/templates/segurado/detalhe-segurado.html
@@ -6,89 +6,98 @@
 </head>
 <body>
 	<div th:replace="header"></div>
-	
+
 	<div class="container" id="content" tabindex="-1">
-		<fieldset class="scheduler-border">
-		<legend class="scheduler-border white">Informações do Segurado</legend>
-		<form action="#" th:action="@{/segurado/gravar}" th:object="${segurado}" method="post">
+		<div class="borda-div">
+			<fieldset class="scheduler-border">
+				<legend class="scheduler-border white">Informações do Segurado</legend>
+				<form action="#" th:action="@{/segurado/gravar}"
+					th:object="${segurado}" method="post">
 
-		<div class="row" >
-			<div class="col-md-6"> 
-				<div class="form-group">
-					<dl>
-						<dt>Segurado:</dt>
-						<dd class="text-info" th:text="*{nome}"></dd>
-					</dl>
-				</div>
-	
-				<div class="form-group">
-					<dl>
-						<dt>CPF:</dt>
-						<dd class="text-info" th:text="*{cpf}"></dd>
-					</dl>
-				</div>
-				<div class="form-group">
-				
-					<dl>
-						<dt>Telefone:</dt>
-						<dd class="text-info" th:text="*{telefone}"></dd>
-					</dl>
-				</div>
-			</div>
-			<div class="col-md-6">
-				<div class="form-group">
-				
-					<dl>
-						<dt>CEP:</dt>
-						<dd class="text-info" th:text="*{cep}"></dd>
-					</dl>
-				</div>
-				<div class="form-group">
-					<dl>
-						<dt>e-mail:</dt>
-						<dd class="text-info" th:text="*{email}"></dd>
-					</dl>
-				</div>
-					<div class="form-group">
-						<dl>
-						<dt>Data de Nascimento:</dt>
-						<dd class="text-info" th:text="*{#dates.format(dataDeNascimento, 'dd/MM/yyyy')}"></dd>
-					</dl>
+					<div class="row">
+						<div class="col-md-4">
+							<div class="form-group">
+								<dl>
+									<dt>Segurado:</dt>
+									<dd class="text-info" th:text="*{nome}"></dd>
+								</dl>
+							</div>
+
+
+							<div class="form-group">
+
+								<dl>
+									<dt>Telefone:</dt>
+									<dd class="text-info" th:text="*{telefone}"></dd>
+								</dl>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="form-group">
+
+								<dl>
+									<dt>CEP:</dt>
+									<dd class="text-info" th:text="*{cep}"></dd>
+								</dl>
+							</div>
+							<div class="form-group">
+								<dl>
+									<dt>e-mail:</dt>
+									<dd class="text-info" th:text="*{email}"></dd>
+								</dl>
+							</div>
+
+
+						</div>
+						<div class="col-md-4">
+							<div class="form-group">
+								<dl>
+									<dt>CPF:</dt>
+									<dd class="text-info" th:text="*{cpf}"></dd>
+								</dl>
+							</div>
+							<div class="form-group">
+								<dl>
+									<dt>Data de Nascimento:</dt>
+									<dd class="text-info" th:text="*{#dates.format(dataDeNascimento, 'dd/MM/yyyy')}"></dd>
+								</dl>
+							</div>
+
+
+						</div>
 					</div>
-					
-			</div>
+					<hr/>
+					<div class="centralizar">
+						<input type="button" class="btn btn-default" onclick="voltar();" value="Voltar" style="width:139px"></input> 
+						<a href="#"	th:href="@{/segurado/cadastrar-item(id=${segurado.id})}" class="btn btn-success">Cadastrar Seguro</a>
+					</div>
+				</form>
+				<div th:if="${!listaItemSeguro.empty}">
+					 <br /> <br />
+					<legend class="scheduler-border">Seguros</legend>
+					 <br />
+				
+					<table class="table table-hover" id="tab-segurado">
+
+						<tr>
+							<th>Modelo</th>
+							<th>Data de Fabricacao</th>
+							<th>Placa</th>
+							<th>Chassi</th>
+						</tr>
+						<tr th:each="itemSeguro : ${listaItemSeguro}">
+							<td><span th:text="${itemSeguro.modelo}"></span></td>
+							<td><span th:text="${#dates.format(itemSeguro.dataFabricacao, 'dd/MM/yyyy')}"></span></td>
+							<td><span th:text="${itemSeguro.placa}"></span></td>
+							<td><span th:text="${itemSeguro.chassi}"></span></td>
+						</tr>
+					</table>
+				</div>
+
+			</fieldset>
 		</div>
-			<br />
-			<br />
-			<div class="centralizar">
-				<input type="button" class="btn btn-default" onclick="voltar();" value="Voltar"></input>
-				<a href="#" th:href="@{/segurado/cadastrar-item(id=${segurado.id})}" class="btn btn-success">Cadastrar Item de Seguro</a>
-			</div>
-		</form>
-
-<br/>		
-<br/>		
-<br/>		
-		<table class="table table-hover" id="tab-segurado">
-
-		<tr>
-			<th>Modelo</th>
-			<th>Data de Fabricacao</th>
-			<th>Placa</th>
-			<th>Chassi</th>
-		</tr>
-		<tr th:each="itemSeguro : ${listaItemSeguro}">
-			<td><span th:text="${itemSeguro.modelo}"></span></td>
-			<td><span th:text="${#dates.format(itemSeguro.dataFabricacao, 'dd/MM/yyyy')}"></span></td>
-			<td><span th:text="${itemSeguro.placa}"></span></td>
-			<td><span th:text="${itemSeguro.chassi}"></span></td>
-		</tr>
-		</table>
-		
-	</fieldset>
-
 	</div>
-	
-	
+	<div th:replace="footer"></div>
+
 </body>
 </html>
