Tela de Cadastro Automovel
-Colocado os campos necessários
-Colocado mascara

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -58,6 +58,7 @@
                             <label for="tab-1">Já é Membro? </label>
                          </div>
                     </div>
+                    </form>
                 </div>
             </div>
         </div><footer class="section section-primary"> <div class="container"> <div class="row" align="center"> <div class="col-sm-6"> <h2>SISTEMA GERENCIADOR DE SEGUROS</h2> <p>copyright © corretora de seguros 2017</p></div><div class="col-sm-6"> <p class="text-info text-right"> <br/><br/></p><div class="row"> <div class="col-md-12 hidden-lg hidden-md hidden-sm text-left"> <a href="#"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a> <a href="#"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a> <a href="#"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a> <a href="#"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a> </div></div><div class="row"> <div class="col-md-12 hidden-xs text-right"> <a href="#"><i class="fa fa-3x fa-fw fa-instagram text-inverse"></i></a> <a href="#"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a> <a href="#"><i class="fa fa-3x fa-fw fa-facebook text-inverse"></i></a> <a href="#"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a> </div></div></div></div></div></footer>
