--- a/src/main/resources/templates/item/cadastro-seguroAutomovel.html
+++ b/src/main/resources/templates/item/cadastro-seguroAutomovel.html
@@ -15,9 +15,12 @@
 		<legend class="scheduler-border">Cadastro do Segurado</legend>
 		<br/>
 		
-		<form action="#" th:action="@{/item/gravar}" th:object="${itemSeguroCarro}" method="post">
+		<form action="#" th:action="@{/item/gravar}" th:object="${itemSeguroAutomovel}" method="post">
+		
+		<h5 class="text-info">INFORMAÇÕES DO AUTOMÓVEL</h5>
+			<br/>
+		
 			<div class="row">
-				<div class="col-md-4"></div>
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="" class="control-label">Modelo</label>
@@ -25,23 +28,38 @@
 						<p th:if="${#fields.hasErrors('modelo')}" class="label label-primary" th:errors="*{modelo}"></p>	
 					</div>
 					<div class="form-group">
+						<label for="" class="control-label">Chassi</label>
+						<input type="text" th:field="*{chassi}" class="form-control" maxlength="17" style="text-transform:uppercase;"/>
+						<p th:if="${#fields.hasErrors('chassi')}" class="label label-primary" th:errors="*{chassi}"></p>	
+					</div>
+				
+				</div>
+				<div class="col-md-4">
+					
+					<div class="form-group">
 						<label for="" class="control-label ">Data de Fabricação</label>
-						<input type="text" th:field="*{dataFabricacao}" class="form-control date" placeholder="Ex.: dd/mm/aaaa" maxlength="10" />
+						<input type="text" th:field="*{dataFabricacao}" class="form-control modeloAno" placeholder="Ex.: aaaa/aaaa" maxlength="9" />
 						<p th:if="${#fields.hasErrors('dataFabricacao')}" class="label label-danger" th:errors="*{dataFabricacao}"></p>	
 					</div>
+					
+					
+				</div>
+				<div class="col-md-4">
 					<div class="form-group">
 						<label for="" class="control-label">Placa</label>
 						<input type="text" th:field="*{placa}" class="form-control placa" style="text-transform:uppercase;"/>
 						<p th:if="${#fields.hasErrors('placa')}" class="label label-primary" th:errors="*{placa}"></p>	
 					</div>
-					<div class="form-group">
-						<label for="" class="control-label">Chassi</label>
-						<input type="text" th:field="*{chassi}" class="form-control" maxlength="17" style="text-transform:uppercase;"/>
-						<p th:if="${#fields.hasErrors('chassi')}" class="label label-primary" th:errors="*{chassi}"></p>	
-					</div>
 				</div>
+				
 				<br/>
 			</div>
+			<br/>
+			<br/>
+			
+			<div th:replace="item/item-seguro"></div>
+			
+			
 			<hr/>
 			<div class="centralizar">
 					<button type="submit" class="btn btn-success">Cadastrar</button>
