Cadastro de Seguros
-Ajustes no cadastro de segurado 
-Ajustes no cadastro do item de seguro automovel

--- a/src/main/resources/templates/item/cadastro-seguroResidencia.html
+++ b/src/main/resources/templates/item/cadastro-seguroResidencia.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8" />
-<title>Cadastro de Segurado</title>
+<title>Cadastro de Seguro Residencial</title>
 
 </head>
 <body>
@@ -12,12 +12,12 @@
 	<div class="container" id="content" tabindex="-1">
 		<div class="borda-div">
 		<fieldset class="scheduler-border">
-		<legend class="scheduler-border">Cadastro do Segurado</legend>
+		<legend class="scheduler-border">Cadastro do Seguro Residencial</legend>
 		<br/>
 		
-		<form action="#" th:action="@{/item/gravar-seguroAutomovel}" th:object="${itemSeguroAutomovel}" method="post">
+		<form action="#" th:action="@{/item/gravar}" th:object="${itemSeguroAutomovel}" method="post">
 		
-		<h5 class="text-info">INFORMAÇÕES DO AUTOMÓVEL</h5>
+		<h5 class="text-info">INFORMAÇÕES RESIDÊNCIA</h5>
 			<br/>
 		
 			<div class="row">
