--- a/src/main/resources/templates/segurado/cadastro-segurado.html
+++ b/src/main/resources/templates/segurado/cadastro-segurado.html
@@ -16,10 +16,15 @@
 		<br/>
 		<form action="#" th:action="@{/segurado/gravar}" th:object="${segurado}" method="post">
 		<input type="hidden" th:field="*{id}"></input>
+		
+			<br/>
+				<h5 class="text-info">INFORMAÇÕES DO SEGURADO</h5>
+			<br/>
+
 		<div class="row">
-			<div class="col-md-3">
-			</div> 
-			<div class="col-md-3"> 
+			
+			
+			<div class="col-md-4">
 				<div class="form-group">
 					<label for="" class="control-label">Segurado</label>
 					<input type="text" th:field="*{nome}" class="form-control" />
@@ -31,38 +36,39 @@
 					<input type="text" th:field="*{cpf}" class="form-control cpf" />
 					 <p th:if="${#fields.hasErrors('cpf')}" class="label label-primary" th:errors="*{cpf}"></p>
 				</div>
+			</div> 
+			
+			
+			
+			<div class="col-md-4"> 
 				<div class="form-group">
 					<label for="" class="control-label">Telefone</label>
 					<input type="text" th:field="*{telefone}" class="form-control telefone" />
 					<p th:if="${#fields.hasErrors('telefone')}" class="label label-primary" th:errors="*{telefone}"></p>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="form-group">
-					<label for="" class="control-label">CEP</label>
-					<input type="text" th:field="*{cep}" class="form-control cep" />
 				</div>
 				<div class="form-group">
 					<label for="" class="control-label">E-mail</label>
 					 <input type="text" th:field="*{email}" class="form-control" />
 					 <p th:if="${#fields.hasErrors('email')}" class="label label-primary" th:errors="*{email}" ></p>
 				</div>
-					<div class="form-group">
-						<label for="" class="control-label">Data de Nascimento</label>
-						<input type="text" th:field="*{dataDeNascimento}" class="form-control  date" placeholder="Ex.: dd/mm/aaaa" maxlength="10"/>
-						<p th:if="${#fields.hasErrors('dataDeNascimento')}" class="label label-primary" th:errors="*{dataDeNascimento}">Incorrect LP</p>
-					</div>
 			</div>
 			
 			
-			<div class="col-md-3">
 			
 			
-			
-			
-			
+			<div class="col-md-4">
+				
+				<div class="form-group">
+					<label for="" class="control-label">Data de Nascimento</label>
+					<input type="text" th:field="*{dataDeNascimento}" class="form-control  date" placeholder="Ex.: dd/mm/aaaa" maxlength="10"/>
+					<p th:if="${#fields.hasErrors('dataDeNascimento')}" class="label label-primary" th:errors="*{dataDeNascimento}">Incorrect LP</p>
+				</div>
 			</div>
+			
 		</div>
+		
+		<div th:replace="comum/endereco"></div>
+		
 		
 		<hr/>
 
