--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -34,6 +34,7 @@
 				<ul class="dropdown-menu">
                   <li><a href="#" th:href="@{/item/cadastro-seguroAutomovel}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro de Automóvel </a></li>
                   <li><a href="#" th:href="@{/item/cadastro-seguroResidencial}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro de Residência </a></li>
+                  <li><a href="#" th:href="@{/item/cadastro-seguroEmpresarial}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro Empresarial </a></li>
                 </ul>
 			</li>
 		</ul>
