Item Seguro de Aluguel

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -35,6 +35,8 @@
                   <li><a href="#" th:href="@{/item/cadastro-seguroAutomovel}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro de Automóvel </a></li>
                   <li><a href="#" th:href="@{/item/cadastro-seguroResidencial}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro de Residência </a></li>
                   <li><a href="#" th:href="@{/item/cadastro-seguroEmpresarial}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro Empresarial </a></li>
+                  <li><a href="#" th:href="@{/item/cadastro-seguroVida}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro Vida </a></li>
+                  <li><a href="#" th:href="@{/item/cadastro-seguroAluguel}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro de Aluguel </a></li>
                 </ul>
 			</li>
 		</ul>
